--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
-name: ci 
+name: ci
 on:
   push:
     branches:
-      - master 
+      - master
       - main
 
 permissions:
@@ -16,13 +16,14 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.x
+          python-version: '3.x'
 
-      - uses: actions/cache@v2
+      - uses: actions/cache@v4
         with:
           key: ${{ github.ref }}
           path: .cache
 
       - run: pip install mkdocs-material pillow cairosvg
 
+      # Point to the nested mkdocs.yml
       - run: mkdocs gh-deploy --config-file docs/mkdocs.yml --force
