--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -53,6 +53,9 @@ markdown_extensions:
   - pymdownx.tabbed:
       alternate_style: true
 
+extra_css:
+  - css/style.css
+
 extra:
   social:
     - icon: fontawesome/brands/github-alt
