--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
     - 01 Project Setup:
       - Vulkan SDK: 01/Vulkan_SDK.md
       - Project Setup: 01/Project_Setup.md
+      - Instance Creation: 01/Instance_Creation.md
     # - 02. Renderloop:
     # - 03. The Compute Pipeline:
     # - 04. Immidiate Mode GUI:
