Add window creation and main loop to vklite
Introduces a Window struct and related management methods to vklite::Context, enabling creation, destruction, and tracking of multiple windows. Implements a centralized application loop (runMainLoop) and updates the documentation and sandbox example to demonstrate multi-window support. Also updates project setup and navigation in documentation, and removes custom CSS overrides.

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -10,6 +10,7 @@ nav:
       - Vulkan SDK: 01/Vulkan_SDK.md
       - Project Setup: 01/Project_Setup.md
       - Instance Creation: 01/Instance_Creation.md
+    - Window Creation: 01/Window_Creation.md
     # - 02. Renderloop:
     # - 03. The Compute Pipeline:
     # - 04. Immidiate Mode GUI:
